--- a/css/script.css
+++ b/css/script.css
@@ -11,7 +11,35 @@
 .colorBox {
     width: 300px;
     height: 300px;
-    background: black;
+    background: rgba(0, 0, 0, 0.313);
+    padding: 20px;
+    overflow: scroll;
+
+}
+ul {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    padding: 0;
+    list-style: none;
+}
+.none{
+    display: none;
+}
+li {
+    padding: 10px;
+    background-color: blueviolet;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
+.listItem {
+    color: rgb(255, 255, 255);
+    text-transform: capitalize;
+    font-size: 20px;
+    padding: 0 20px;
 }
 .btn__box {
     display: flex;
@@ -23,6 +51,6 @@
     color: white;
     cursor: pointer;
 }
-.colorCode{
+.listInput {
     padding: 10px 50px;
 }
